public class Devengo {
    private String persepciones_salariales;
    private String  persepciones_no_salariales;

    public Devengo(String persepciones_salariales, String persepciones_no_salariales) {
        this.persepciones_salariales = persepciones_salariales;
        this.persepciones_no_salariales = persepciones_no_salariales;
    }

    public String getPersepciones_salariales() {
        return persepciones_salariales;
    }

    public void setPersepciones_salariales(String persepciones_salariales) {
        this.persepciones_salariales = persepciones_salariales;
    }

    public String getPersepciones_no_salariales() {
        return persepciones_no_salariales;
    }

    public void setPersepciones_no_salariales(String persepciones_no_salariales) {
        this.persepciones_no_salariales = persepciones_no_salariales;
    }
    
}

