public class Sueldo_Base {
   private String periodo;

public Sueldo_Base(String periodo) {
    this.periodo = periodo;
}

public String getPeriodo() {
    return periodo;
}

public void setPeriodo(String periodo) {
    this.periodo = periodo;
}

   
}